--- a/src/components/list/List.module.css
+++ b/src/components/list/List.module.css
@@ -1,8 +1,3 @@
-.container {
-    display: grid;
-    grid-template: 100% / auto;
-}
-
 ul {
     padding: 0
 }
@@ -15,12 +10,14 @@ ul {
 
 .listEntry a {
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
+    flex-flow: row wrap;
     align-items: center;
+    justify-content: center;
     padding: 1rem;
-    border: 1px solid var(--text-color)
+    border: 1px solid var(--text-color);
+    overflow: hidden;
 }
+
 
 .listEntry:nth-child(5n-4) a:hover {
     background: var(--red);
@@ -40,12 +37,25 @@ ul {
 }
 
 .listEntry a div {
-    flex-basis: 75%;
     padding: 1rem 1rem 1rem 2rem;
+    width: 100%;
+    text-align: center;
 }
 
 .listEntry img {
-    flex-basis: 300px;
+    width: 200px;
+    max-width: 100%;
     height: auto;
     border-radius: 50%;
+    box-shadow: rgba(0,0,0,.25) 1px 1px 3px;
+}
+
+@media (min-width: 600px) {
+    .listEntry a {
+        justify-content: stretch;
+    }
+
+    .listEntry a div {
+        width: auto
+    }
 }
