--- a/src/components/shared/shared.module.css
+++ b/src/components/shared/shared.module.css
@@ -1,3 +1,9 @@
 .error {
-    color: red;
+    background: var(--red);
+    padding: 1rem;
+    margin-top: 1rem
+}
+
+.error > * {
+    margin: 0.5rem 0
 }
